syntax = "proto3";

import "records/records.proto";

option go_package = "chronicler/storage/endpoint";

package chronicler.storage;


message SaveRequest {
    
}

message SaveResponse {
}

message ListRequest {
}

message ListResponse {
  repeated chronicler.records.RecordSet recordSets = 1;
}

message DeleteRequest {
  repeated string recordSetIds = 1;
}

message DeleteResponse {
}

message GetRequest {
  repeated string recordSetIds = 1;
}

message GetResponse {
  repeated chronicler.records.RecordSet recordSets = 1;
}

service Storage {
  rpc save(SaveRequest) returns (SaveResponse);
  rpc list(ListRequest) returns (ListResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
  rpc get(GetRequest) returns (GetResponse);
}
